[gd_scene load_steps=10 format=3 uid="uid://cyepgi88oygyr"]

[ext_resource type="Script" path="res://hud.gd" id="1_hs2ao"]
[ext_resource type="FontFile" uid="uid://b61kux6dkwwuq" path="res://fonts/Xolonium-Regular.ttf" id="2_fxu6b"]
[ext_resource type="Script" path="res://start_button.gd" id="3_2waxb"]
[ext_resource type="Script" path="res://message.gd" id="3_ko6hi"]

[sub_resource type="InputEventAction" id="InputEventAction_id10e"]
action = &"start game"

[sub_resource type="Shortcut" id="Shortcut_whfln"]
events = [SubResource("InputEventAction_id10e")]

[sub_resource type="Theme" id="Theme_0cjjy"]

[sub_resource type="InputEventAction" id="InputEventAction_7ud8e"]
action = &"hard"

[sub_resource type="Shortcut" id="Shortcut_x3gq5"]
events = [SubResource("InputEventAction_7ud8e")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hs2ao")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -91.0
offset_right = 91.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_fxu6b")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_fxu6b")
theme_override_font_sizes/font_size = 64
text = "Collect Nuts"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
script = ExtResource("3_ko6hi")

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -105.0
offset_top = -140.0
offset_right = 105.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_fxu6b")
theme_override_font_sizes/font_size = 55
shortcut = SubResource("Shortcut_whfln")
text = "LETS NUT"
script = ExtResource("3_2waxb")

[node name="CheckButton" type="CheckButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -256.0
offset_right = 33.0
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme = SubResource("Theme_0cjjy")
shortcut = SubResource("Shortcut_x3gq5")
text = "ANUXTREME"

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="CheckButton" to="Message" method="_on_check_button_toggled"]
[connection signal="toggled" from="CheckButton" to="StartButton" method="_on_check_button_toggled"]
